# botaction

./: README.md  SOLUTION_SUMMARY.md  VIEWER_COMPLETE.md  binz_reader.py  check_counts.py  cli.py  debug_export.py  debug_file_map.py  demo_decryption.py  demo_viewer.py  download_model.py  embed_page.html  extract_defs.py  inspect_model.py  inspect_osgjs.py  model_data.json  model_decryptor.py  model_file_fresh.binz  model_page.html  model_viewer.py  package-lock.json  package.json  pyproject.toml  repomix-output-jsfiles.zip.xml  simple_export.py  sketchfab_fetcher.py  sketchfab_gui.py  sketchfab_utils.py  test_decrypt.py  test_decrypt2.py  test_load.py  test_model_loading.py  test_sphere_converted.stl  test_viewer.py
.claude/: settings.local.json
data/: downloaded_model.binz  url.txt
demos/: demo_decryption.py  demo_viewer.py
docs/: DECRYPTION_ANALYSIS.md  PROJECT_STRUCTURE.md  QUICK_REFERENCE.md  VIEWER_GUIDE.md  VIEWER_STATUS.md
downloads/: annihilator_2000_approx.stl  annihilator_2000_decrypted.3mf  backup.3mf  dea4f17e94974e1fa720cbadc531ed63_7dffeb160ae740c082d33243f011454f.osgjs  dea4f17e94974e1fa720cbadc531ed63_7dffeb160ae740c082d33243f011454f_params.json  dea4f17e94974e1fa720cbadc531ed63_metadata.json  dea4f17e94974e1fa720cbadc531ed63_model_file.binz  dea4f17e94974e1fa720cbadc531ed63_model_file_decoded.binz  dea4f17e94974e1fa720cbadc531ed63_model_file_wireframe.binz  diter_standalone.js  diter_wasm_blob.js  diter_wasm_blob.wasm  diter_wasm_blob.wat  module_Hplus3W.js  module_IuDx.js  module_Mq9W.js  module_vNR5.js  test_sphere.3mf  test_torus.binz
(+264 files in other folders)
